--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,28 @@ header {
 .highlight {
   background-color: #cce0ff; /* pale blue */
 }
-.dark-mode {
-  background-color: #2a2a2a;
-  color: #f2e6d0;
+/* --- Dark Mode --- */
+.dark-mode body {
+  background-color: #1c1c1c;
+  color: #f2f2f2;
 }
+
+.dark-mode .site-header {
+  background-color: #333;
+}
+
+.dark-mode #sidebar {
+  background-color: #2d2d2d;
+}
+
 .dark-mode .card {
   background-color: #3a3a3a;
-  color: #f2e6d0;
+  border-color: #555;
+}
+
+.dark-mode .tag-badge {
+  background-color: #666;
+  color: #fff;
 }
 #sidebarSearch {
   width: 100%;
